terraform/modules/route-tables/main.tf
resource "aws_route_table" "public" {

  vpc_id = var.vpc_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = var.internet_gateway_id
  }

  tags = merge(
    var.tags,
    {
      Name = "${var.name_prefix}-public-rt"
      Type = "Public"
    }
  )
}

resource "aws_route_table" "private" {

  vpc_id = var.vpc_id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = var.nat_gateway_id
  }

  tags = merge(
    var.tags,
    {
      Name = "${var.name_prefix}-private-rt"
      Type = "Private"
    }
  )
}
